--- a/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/question/question_detail.html
+++ b/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/question/question_detail.html
@@ -5,12 +5,13 @@
   <h2 class="border-bottom py-2">{{ question.subject }}</h2>
   <div class="card my-3">
     <div class="card-body">
-      <div class="card-text" style="white-space: pre-line;">
+      <div class="card-text" style="white-space: pre-line">
         {{ question.content }}
       </div>
       <div class="d-flex justify-content-end">
-        <div class="badge badge-light p-2">
-          {{ question.create_date|datetime }}
+        <div class="badge badge-light p-2 text-left">
+          <div class="mb-2">{{ question.user.username }}</div>
+          <div>{{ question.create_date|datetime }}</div>
         </div>
       </div>
     </div>
@@ -20,12 +21,13 @@
   {% for answer in question.answer_set %}
   <div class="card my-3">
     <div class="card-body">
-      <div class="card-text" style="white-space: pre-line;">
+      <div class="card-text" style="white-space: pre-line">
         {{ answer.content }}
       </div>
       <div class="d-flex justify-content-end">
-        <div class="badge badge-light p-2">
-          {{ answer.create_date|datetime }}
+        <div class="badge badge-light p-2 text-left">
+          <div class="mb-2">{{ answer.user.username }}</div>
+          <div>{{ answer.create_date|datetime }}</div>
         </div>
       </div>
     </div>
@@ -42,9 +44,9 @@
     {% endfor %}
     <!-- 오류표시 End -->
     <div class="form-group">
-      <textarea name="content" id="content" class="form-control" rows="10"></textarea>
+      <textarea {% if not g.user %}disabled{% endif %} name="content" id="content" class="form-control" rows="10"></textarea>
     </div>
-    <input type="submit" value="답변등록" class="btn btn-primary">
+    <input {% if not g.user %}disabled{% endif %} type="submit" value="답변등록" class="btn btn-primary">
   </form>
 </div>
 {% endblock %}
