--- a/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/question/question_detail.html
+++ b/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/question/question_detail.html
@@ -9,11 +9,23 @@
         {{ question.content }}
       </div>
       <div class="d-flex justify-content-end">
+        {% if question.modify_date %}
+        <div class="badge badge-light p-2 text-left mx-3">
+          <div class="mb-2">modified at</div>
+          <div>{{ question.modify_date|datetime }}</div>
+        </div>
+        {% endif %}
         <div class="badge badge-light p-2 text-left">
           <div class="mb-2">{{ question.user.username }}</div>
           <div>{{ question.create_date|datetime }}</div>
         </div>
       </div>
+      {% if g.user == question.user %}
+      <div class="my-3">
+        <a href="{{ url_for('question.modify', question_id=question.id) }}" class="btn btn-sm btn-outline-secondary">수정</a>
+        <a href="#" class="delete btn btn-sm btn-outline-danger" data-uri="{{ url_for('question.delete', question_id=question.id) }}">삭제</a>
+      </div>
+      {% endif %}
     </div>
   </div>
 
@@ -25,11 +37,23 @@
         {{ answer.content }}
       </div>
       <div class="d-flex justify-content-end">
+        {% if answer.modify_date %}
+        <div class="badge badge-light p-2 text-left mx-3">
+          <div class="mb-2">modified at</div>
+          <div>{{ answer.modify_date|datetime }}</div>
+        </div>
+        {% endif %}
         <div class="badge badge-light p-2 text-left">
           <div class="mb-2">{{ answer.user.username }}</div>
           <div>{{ answer.create_date|datetime }}</div>
         </div>
       </div>
+      {% if g.user == question.user %}
+      <div class="my-3">
+        <a href="{{ url_for('answer.modify', answer_id=answer.id) }}" class="btn btn-sm btn-outline-secondary">수정</a>
+        <a href="#" class="delete btn btn-sm btn-outline-danger" data-uri="{{ url_for('answer.delete', answer_id=answer.id) }}">삭제</a>
+      </div>
+      {% endif %}
     </div>
   </div>
   {% endfor %}
@@ -49,4 +73,16 @@
     <input {% if not g.user %}disabled{% endif %} type="submit" value="답변등록" class="btn btn-primary">
   </form>
 </div>
+{% endblock %}
+
+{% block script %}
+<script type="text/javascript">
+  $(document).ready(function () {
+    $('.delete').on('click', function () {
+      if (confirm('정말로 삭제하시겠습니까?')) {
+        location.href = $(this).data('uri');
+      }
+    });
+  });
+</script>
 {% endblock %}
