--- a/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/question/question_detail.html
+++ b/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/question/question_detail.html
@@ -2,106 +2,125 @@
 
 {% block content %}
 <div class="container my-3">
+  {% for message in get_flashed_messages() %}
+  <div class="alert alert-danger" role="alert">{{ message }}</div>
+  {% endfor %}
   <h2 class="border-bottom py-2">{{ question.subject }}</h2>
-  <div class="card my-3">
-    <div class="card-body">
-      <div class="card-text" style="white-space: pre-line">
-        {{ question.content }}
-      </div>
-      <div class="d-flex justify-content-end">
-        {% if question.modify_date %}
-        <div class="badge badge-light p-2 text-left mx-3">
-          <div class="mb-2">modified at</div>
-          <div>{{ question.modify_date|datetime }}</div>
-        </div>
-        {% endif %}
-        <div class="badge badge-light p-2 text-left">
-          <div class="mb-2">{{ question.user.username }}</div>
-          <div>{{ question.create_date|datetime }}</div>
-        </div>
-      </div>
-      {% if g.user == question.user %}
-      <div class="my-3">
-        <a href="{{ url_for('question.modify', question_id=question.id) }}" class="btn btn-sm btn-outline-primary">수정</a>
-        <a href="#" class="btn btn-sm btn-outline-danger" data-uri="{{ url_for('question.delete', question_id=question.id) }}">삭제</a>
-      </div>
-      {% endif %}
-      <!-- 질문 댓글 Start -->
-      {% if question.comment_set|length > 0 %}
-      <div class="mt-3">
-        {% for comment in question.comment_set %}
-        <div class="comment py-2 text-muted">
-          <span style="white-space: pre-line">{{ comment.content }}</span>
-          <span>
-            - {{ comment.user.username }}
-            {% if comment.modify_date %}
-            <small>(수정 {{ comment.modify_date|datetime }})</small>
-            {% else %}
-            <small>({{ comment.create_date|datetime }})</small>
+  <div class="row my-3">
+    <div class="col-1"> <!-- 추천 영역 -->
+      <div class="bg-light text-center p-3 font-weight-bolder mb-1">{{ question.voter|length }}</div>
+      <a href="#" data-uri="{{ url_for('vote.question', question_id=question.id) }}" class="recommend btn btn-sm btn-secondary btn-block my-1">추천</a>
+    </div>
+    <div class="col-11"> <!-- 질문 영역 -->
+      <div class="card">
+        <div class="card-body">
+          <div class="card-text" style="white-space: pre-line">
+            {{ question.content }}
+          </div>
+          <div class="d-flex justify-content-end">
+            {% if question.modify_date %}
+            <div class="badge badge-light p-2 text-left mx-3">
+              <div class="mb-2">modified at</div>
+              <div>{{ question.modify_date|datetime }}</div>
+            </div>
             {% endif %}
-          </span>
-          {% if g.user == comment.user %}
-          <a href="{{ url_for('comment.modify_question', comment_id=comment.id) }}" class="small">수정</a>,
-          <a href="#" class="small delete" data-uri="{{ url_for('comment.delete_question', comment_id=comment.id) }}">삭제</a>
+            <div class="badge badge-light p-2 text-left">
+              <div class="mb-2">{{ question.user.username }}</div>
+              <div>{{ question.create_date|datetime }}</div>
+            </div>
+          </div>
+          {% if g.user == question.user %}
+          <div class="my-3">
+            <a href="{{ url_for('question.modify', question_id=question.id) }}" class="btn btn-sm btn-outline-primary">수정</a>
+            <a href="#" class="btn btn-sm btn-outline-danger" data-uri="{{ url_for('question.delete', question_id=question.id) }}">삭제</a>
+          </div>
           {% endif %}
+          <!-- 질문 댓글 Start -->
+          {% if question.comment_set|length > 0 %}
+          <div class="mt-3">
+            {% for comment in question.comment_set %}
+            <div class="comment py-2 text-muted">
+              <span style="white-space: pre-line">{{ comment.content }}</span>
+              <span>
+                - {{ comment.user.username }}
+                {% if comment.modify_date %}
+                <small>(수정 {{ comment.modify_date|datetime }})</small>
+                {% else %}
+                <small>({{ comment.create_date|datetime }})</small>
+                {% endif %}
+              </span>
+              {% if g.user == comment.user %}
+              <a href="{{ url_for('comment.modify_question', comment_id=comment.id) }}" class="small">수정</a>,
+              <a href="#" class="small delete" data-uri="{{ url_for('comment.delete_question', comment_id=comment.id) }}">삭제</a>
+              {% endif %}
+            </div>
+            {% endfor %}
+          </div>
+          {% endif %}
+          <a href="{{ url_for('comment.create_question', question_id=question.id) }}" class="small">댓글 추가 ..</a>
+          <!-- 질문 댓글 End -->
         </div>
-        {% endfor %}
       </div>
-      {% endif %}
-      <a href="{{ url_for('comment.create_question', question_id=question.id) }}" class="small">댓글 추가 ..</a>
-      <!-- 질문 댓글 End -->
     </div>
   </div>
 
   <h5 class="border-bottom py-2">{{ question.answer_set|length }}개의 답변이 있습니다.</h5>
   {% for answer in question.answer_set %}
-  <div class="card my-3">
-    <div class="card-body">
-      <div class="card-text" style="white-space: pre-line">
-        {{ answer.content }}
-      </div>
-      <div class="d-flex justify-content-end">
-        {% if answer.modify_date %}
-        <div class="badge badge-light p-2 text-left mx-3">
-          <div class="mb-2">modified at</div>
-          <div>{{ answer.modify_date|datetime }}</div>
-        </div>
-        {% endif %}
-        <div class="badge badge-light p-2 text-left">
-          <div class="mb-2">{{ answer.user.username }}</div>
-          <div>{{ answer.create_date|datetime }}</div>
-        </div>
-      </div>
-      {% if g.user == question.user %}
-      <div class="my-3">
-        <a href="{{ url_for('answer.modify', answer_id=answer.id) }}" class="btn btn-sm btn-outline-primary">수정</a>
-        <a href="#" class="btn btn-sm btn-outline-danger" data-uri="{{ url_for('answer.delete', answer_id=answer.id) }}">삭제</a>
-      </div>
-      {% endif %}
-      <!-- 답변 댓글 Start -->
-      {% if answer.comment_set|length > 0 %}
-      <div class="mt-3">
-        {% for comment in answer.comment_set %}
-        <div class="comment py-2 text-muted">
-          <span style="white-space: pre-line">{{ comment.content }}</span>
-          <span>
-            - {{ comment.user.username }}
-            {% if comment.modify_date %}
-            <small>(수정 {{ comment.modify_date|datetime }})</small>
-            {% else %}
-            <small>({{ comment.create_date|datetime }})</small>
+  <div class="row my-3">
+    <div class="col-1"> <!-- 추천 영역 -->
+      <div class="bg-light text-center p-3 font-weight-bolder mb-1">{{ answer.voter|length }}</div>
+      <a href="#" data-uri="{{ url_for('vote.answer', answer_id=answer.id) }}" class="recommend btn btn-sm btn-secondary btn-block my-1">추천</a>
+    </div>
+    <div class="col-11"> <!-- 답변 영역 -->
+      <div class="card">
+        <div class="card-body">
+          <div class="card-text" style="white-space: pre-line">
+            {{ answer.content }}
+          </div>
+          <div class="d-flex justify-content-end">
+            {% if answer.modify_date %}
+            <div class="badge badge-light p-2 text-left mx-3">
+              <div class="mb-2">modified at</div>
+              <div>{{ answer.modify_date|datetime }}</div>
+            </div>
             {% endif %}
-          </span>
-          {% if g.user == comment.user %}
-          <a href="{{ url_for('comment.modify_answer', comment_id=comment.id) }}" class="small">수정</a>,
-          <a href="#" class="small delete" data-uri="{{ url_for('comment.delete_answer', comment_id=comment.id) }}">삭제</a>
+            <div class="badge badge-light p-2 text-left">
+              <div class="mb-2">{{ answer.user.username }}</div>
+              <div>{{ answer.create_date|datetime }}</div>
+            </div>
+          </div>
+          {% if g.user == question.user %}
+          <div class="my-3">
+            <a href="{{ url_for('answer.modify', answer_id=answer.id) }}" class="btn btn-sm btn-outline-primary">수정</a>
+            <a href="#" class="btn btn-sm btn-outline-danger" data-uri="{{ url_for('answer.delete', answer_id=answer.id) }}">삭제</a>
+          </div>
           {% endif %}
+          <!-- 답변 댓글 Start -->
+          {% if answer.comment_set|length > 0 %}
+          <div class="mt-3">
+            {% for comment in answer.comment_set %}
+            <div class="comment py-2 text-muted">
+              <span style="white-space: pre-line">{{ comment.content }}</span>
+              <span>
+                - {{ comment.user.username }}
+                {% if comment.modify_date %}
+                <small>(수정 {{ comment.modify_date|datetime }})</small>
+                {% else %}
+                <small>({{ comment.create_date|datetime }})</small>
+                {% endif %}
+              </span>
+              {% if g.user == comment.user %}
+              <a href="{{ url_for('comment.modify_answer', comment_id=comment.id) }}" class="small">수정</a>,
+              <a href="#" class="small delete" data-uri="{{ url_for('comment.delete_answer', comment_id=comment.id) }}">삭제</a>
+              {% endif %}
+            </div>
+            {% endfor %}
+          </div>
+          {% endif %}
+          <a href="{{ url_for('comment.create_answer', answer_id=answer.id) }}" class="small">댓글 추가 ..</a>
+          <!-- 답변 댓글 End -->
         </div>
-        {% endfor %}
       </div>
-      {% endif %}
-      <a href="{{ url_for('comment.create_answer', answer_id=answer.id) }}" class="small">댓글 추가 ..</a>
-      <!-- 답변 댓글 End -->
     </div>
   </div>
   {% endfor %}
@@ -128,6 +147,11 @@
   $(document).ready(function () {
     $('.delete').on('click', function () {
       if (confirm('정말로 삭제하시겠습니까?')) {
+        location.href = $(this).data('uri');
+      }
+    });
+    $('.recommend').on('click', function () {
+      if (confirm('정말로 추천하시겠습니까?')) {
         location.href = $(this).data('uri');
       }
     });
