--- a/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/navbar.html
+++ b/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/navbar.html
@@ -4,7 +4,7 @@
     <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+    <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
       {% if g.user %}
       <ul class="navbar-nav">
         <li class="nav-item">
