--- a/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/question/question_detail.html
+++ b/flask/doit_JumpToFlask/flask-tutorial/mysite2/pybo/templates/question/question_detail.html
@@ -14,9 +14,7 @@
     <div class="col-11"> <!-- 질문 영역 -->
       <div class="card">
         <div class="card-body">
-          <div class="card-text" style="white-space: pre-line">
-            {{ question.content }}
-          </div>
+          <div class="card-text">{{ question.content|markdown }}</div>
           <div class="d-flex justify-content-end">
             {% if question.modify_date %}
             <div class="badge badge-light p-2 text-left mx-3">
@@ -40,7 +38,7 @@
           <div class="mt-3">
             {% for comment in question.comment_set %}
             <div class="comment py-2 text-muted">
-              <span style="white-space: pre-line">{{ comment.content }}</span>
+              <span>{{ comment.content }}</span>
               <span>
                 - {{ comment.user.username }}
                 {% if comment.modify_date %}
@@ -66,6 +64,7 @@
 
   <h5 class="border-bottom py-2">{{ question.answer_set|length }}개의 답변이 있습니다.</h5>
   {% for answer in question.answer_set %}
+  <a name="answer_{{ answer.id }}"></a>
   <div class="row my-3">
     <div class="col-1"> <!-- 추천 영역 -->
       <div class="bg-light text-center p-3 font-weight-bolder mb-1">{{ answer.voter|length }}</div>
@@ -74,9 +73,7 @@
     <div class="col-11"> <!-- 답변 영역 -->
       <div class="card">
         <div class="card-body">
-          <div class="card-text" style="white-space: pre-line">
-            {{ answer.content }}
-          </div>
+          <div class="card-text">{{ answer.content|markdown }}</div>
           <div class="d-flex justify-content-end">
             {% if answer.modify_date %}
             <div class="badge badge-light p-2 text-left mx-3">
@@ -100,7 +97,7 @@
           <div class="mt-3">
             {% for comment in answer.comment_set %}
             <div class="comment py-2 text-muted">
-              <span style="white-space: pre-line">{{ comment.content }}</span>
+              <span>{{ comment.content }}</span>
               <span>
                 - {{ comment.user.username }}
                 {% if comment.modify_date %}
