--- a/flask/flask-web-service-inflearn/05_TodoList/Project/templates/base.html
+++ b/flask/flask-web-service-inflearn/05_TodoList/Project/templates/base.html
@@ -3,17 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Server</title>
+    <title>Todo List</title>
     <link rel="icon" href="/static/images/favicon.png" />
 
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- Popper JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!-- Bootstrap CSS & JS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+      crossorigin="anonymous"
+    ></script>
     <!-- fontawesome -->
     <link
       rel="stylesheet"
@@ -22,13 +31,21 @@
     />
   </head>
   <body>
-    <div class="text-left mx-3">
-      <h2>
-        <i class="fa fa-sticky-note"></i>
-        <strong>할 일을 메모하자!</strong>
-      </h2>
+    <div class="container">
+      <div class="text-left">
+        <h3 style="padding: 20px 0">
+          <i class="fa fa-sticky-note"></i>
+          <strong>할 일을 메모하자!</strong>
+        </h3>
+      </div>
     </div>
 
-    {% include "nav.html" %} {% block content %}{% endblock %} {% include "footer.html" %}
+    {% include "nav.html" %}
+
+    {% block content %}
+    {% endblock %}
+
+    {% include "footer.html" %}
+
   </body>
 </html>
