--- a/flask/flask-web-service-inflearn/05_TodoList/Project/templates/nav.html
+++ b/flask/flask-web-service-inflearn/05_TodoList/Project/templates/nav.html
@@ -1,15 +1,19 @@
-<nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand mb-0 h1" href="/">About</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container">
+    <a class="navbar-brand mb-0 h1" href="/">About</a>
 
-  <ul class="navbar-nav ml-auto">
-    <li class="nav-item">
-      <a class="nav-link" href="/">모든 항목</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/">해야 할 항목</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/">완료된 항목</a>
-    </li>
-  </ul>
+    <div>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/all">모든 항목</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/active">해야 할 항목</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/completed">완료된 항목</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </nav>
