--- a/django/django-instagram-clone_kindfamily/instaclone-frontend/css/style.css
+++ b/django/django-instagram-clone_kindfamily/instaclone-frontend/css/style.css
@@ -125,6 +125,7 @@ body {
 }
 .contents {
   max-width: 614px;
+  /*height: 500px;*/
   border: 1px solid rgba(0, 0, 0, 0.09);
   border-radius: 3px;
   margin-bottom: 60px;
