--- a/flask/python-web-inflearn/flask-tutorial/flask-board/main/templates/view.html
+++ b/flask/python-web-inflearn/flask-tutorial/flask-board/main/templates/view.html
@@ -48,8 +48,15 @@
         {% if comments.count() > 0 %}
           {% for comment in comments %}
           <tr>
-            <td><small>{{ comment.name }}님의 댓글: &nbsp;{{ comment.comment }}</small></td>
-            <td><small>{{ comment.created_at|formatdatetime }}</small></td>
+            <td>
+              <span style="display: inline-block; width: 80px; margin-left: 10px;"><small>{{ comment.name }}</small></span>
+              <span><small>{{ comment.comment }}</small></span>
+              <span class="float-right"><small>{{ comment.created_at|formatdatetime }}</small></span>
+            </td>
+            <td class="text-center">
+              <small><a href="#">수정</a></small><span style="color: #808080"> | </span>
+              <small><a href="#" class="text-danger">삭제</a></small>
+            </td>
           </tr>
           {% endfor %}
         {% endif %}
