--- a/flask/python-web-inflearn/flask-tutorial/flask-board/main/templates/view.html
+++ b/flask/python-web-inflearn/flask-tutorial/flask-board/main/templates/view.html
@@ -42,7 +42,7 @@
     <div>
       <span style="margin-left: 30px">댓글 목록</span>
       {% if comments.count() > 0 %}
-      <span id="cCnt">{{ comments.count() }}</span>
+      <span id="comment_count">{{ comments.count() }}</span>
       {% endif %}
       <table class="table" style="width: 900px">
         {% if comments.count() > 0 %}
