--- a/flask/python-web-inflearn/flask-tutorial/flask-board/main/templates/view.html
+++ b/flask/python-web-inflearn/flask-tutorial/flask-board/main/templates/view.html
@@ -42,36 +42,7 @@
     <div id="commentArea" style="width: 900px">
       <span style="margin-left: 12px;">댓글 목록</span>
       <span id="commentCount"></span>
-      <table class="table" id="commentList" style="width: 900px">
-        {# jinja2 주석처리
-        {% if comments.count() > 0 %}
-          {% for comment in comments %}
-          <tr>
-            <td>
-              <span style="display: inline-block; width: 80px; margin-left: 10px;"><small>{{ comment.name }}</small></span>
-              <span><small>{{ comment.comment }}</small></span>
-              <span class="float-right"><small>{{ comment.created_at|formatdatetime }}</small></span>
-            </td>
-            <td class="text-center">
-              {% if comment.writer_id == session.get('id') %}
-              <small><a href="#">수정</a></small><span style="color: #808080">&nbsp;&nbsp;|&nbsp;&nbsp;</span>
-              <small><a href="#" class="text-danger">삭제</a></small>
-              {% endif %}
-            </td>
-          </tr>
-          {% endfor %}
-        {% endif %}
-        <tr>
-          <td>
-            <textarea name="comment" id="comment" cols="100" rows="4" placeholder="댓글을 입력하세요." style="padding: 5px"></textarea>
-          </td>
-          <td>
-            <!--<input type="submit" value="댓글 등록" class="btn btn-outline-primary" style="height: 90px; margin-top: 8px;">-->
-            <a href="#" onClick="addComment()" class="btn btn-outline-primary" style="height: 90px; margin-top: 8px;">댓글등록</a>
-          </td>
-        </tr>
-        #}
-      </table>
+      <table class="table" id="commentList" style="width: 900px"></table>
     </div>
   </form>
 </div>
@@ -79,12 +50,7 @@
 
 {% block script %}
 <script>
-  /*
   $(document).ready(function () {
-    get_comment_list();
-  });
-  */
-  $(function() {
     get_comment_list();
   });
 
@@ -170,7 +136,10 @@
         cache: false,
         data: data,
         success: function (data) {
+          if (data['error'] == 'success') {
             get_comment_list();
+            alert('댓글이 삭제 되었습니다.');
+          }
         },
         error: function (request, status, error) {
           let msg = 'Error: ' + request.status + '<br>' + '내용: ' + request.responseText + '<br>' + error;
