--- a/django/django-todolist/base/templates/base/main.html
+++ b/django/django-todolist/base/templates/base/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>To Do Items</title>
+    <title>To-Do List</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
@@ -112,15 +112,11 @@
         padding: 20px;
       }
     </style>
-
   </head>
   <body>
-
     <div class="container">
       {% block content %}
-
       {% endblock content %}
     </div>
-
   </body>
 </html>
